solve the issue of footer overlap

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
 
 body {
     background-color: #000000;
+    display: flex;
+    flex-direction: row;
 
 
 }
@@ -504,7 +506,9 @@ button {
 
 .footer {
     background-color: red;
-    width: 20px;
+    width: 2000px;
+    display: flex;
+    flex-direction: row;
 }
 
 .music-player {
